<resources>
    <string name="app_name">AndroidChatClient</string>
    <string name="chat_server">Chat Server</string>
    <string name="user_name">User name:</string>
    <string name="chat_room">Chat room:</string>
    <string name="enter_chat">Join</string>
    <string name="active_users">Active Users:</string>
    <string name="messages">Messages:</string>
    <string name="send_message">Send</string>
    <string name="enter_message">Enter Message:</string>
    <string name="leave_chat">Leave Chat</string>
</resources>