<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_tertiary80"
    tools:context=".ChatActivity">

    <TextView
        android:id="@+id/chatServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="116dp"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/messageInputBox"
        android:layout_width="255dp"
        android:layout_height="377dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@color/purple_200"
        android:backgroundTint="#95B4EDE5"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/messages"
        android:inputType="textMultiLine"
        android:textColorHint="#263238"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activeUserInputBox"
        app:layout_constraintTop_toBottomOf="@+id/chatServer" />

    <EditText
        android:id="@+id/activeUserInputBox"
        android:layout_width="107dp"
        android:layout_height="379dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:background="@color/purple_200"
        android:backgroundTint="#95B4EDE5"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/active_users"
        android:inputType="textMultiLine"
        android:textColor="#0E0D0D"
        android:textColorHint="#263238"
        app:layout_constraintEnd_toStartOf="@+id/messageInputBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:text="@string/send_message"
        android:textColor="#D1C4E9"
        android:textColorLink="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputBox"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput"
            android:layout_width="289dp"
            android:layout_height="99dp"
            android:hint="@string/enter_message"
            android:textColorHint="#616161" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>